fix text position for custom shapes with zoom != 100% fdo#59862

custom shapes that had text suffered from strange display at zoom
levels != 100%, this was because there was a bug in the code to
correct the textposition

Change-Id: I8d1817cc6be91b3e6379200eb21eb2966d3c2aa9
(cherry picked from commit 443c13e92c6f900a41e6e383684623ead3e088f5)
Reviewed-on: https://gerrit.libreoffice.org/4515
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>